--- a/FingerJointAlgorithm/FingerJointAlgorithm.csproj
+++ b/FingerJointAlgorithm/FingerJointAlgorithm.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FindingBreakpoints.cs" />
+    <Compile Include="Board.cs" />
+    <Compile Include="CutArea.cs" />
+    <Compile Include="Breakpoints.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
