--- a/FingerJointAlgorithmTesting/FingerJointAlgorithmTesting.csproj
+++ b/FingerJointAlgorithmTesting/FingerJointAlgorithmTesting.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BoardTesting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BreakpointTesting.cs" />
   </ItemGroup>
